# covid-19-dxy-fetcher

./: README.md  fetch_all.py  pyproject.toml
data/: 2020-03-01 02:00:00.html  2020-03-01 03:00:00.html  2020-03-01 04:00:00.html  2020-03-01 05:00:00.html  2020-03-01 06:00:00.html  2020-03-01 07:00:00.html  2020-03-01 08:00:00.html  2020-03-01 09:00:00.html  2020-03-01 10:00:00.html  2020-03-01 11:00:00.html  2020-03-01 12:00:00.html  2020-03-01 13:00:00.html  2020-03-01 14:00:00.html  2020-03-01 15:00:00.html  2020-03-01 16:00:00.html  2020-03-01 17:00:00.html  2020-03-01 18:00:00.html  2020-03-01 19:00:00.html  2020-03-01 20:00:00.html  2020-03-01 21:00:00.html  2020-03-01 22:00:00.html  2020-03-01 23:00:00.html
data/2020-03-01 02:00:00_json/: current_world.json  上海市.json  云南省.json  北京市.json  天津市.json  宁夏回族自治区.json  安徽省.json  山西省.json  广西壮族自治区.json  江苏省.json  河北省.json  澳门.json  甘肃省.json  辽宁省.json  重庆市.json  黑龙江省.json
data/2020-03-01 03:00:00_json/: current_china.json  current_world.json  内蒙古自治区.json  台湾.json  吉林省.json  四川省.json  山东省.json  新疆维吾尔自治区.json  浙江省.json  海南省.json  湖北省.json  湖南省.json  福建省.json  西藏自治区.json  贵州省.json  陕西省.json  青海省.json  香港.json
data/2020-03-01 04:00:00_json/: current_china.json  current_world.json  广东省.json  江苏省.json  江西省.json  河南省.json
data/2020-03-01 05:00:00_json/: 新疆维吾尔自治区.json  河南省.json  陕西省.json  黑龙江省.json
data/2020-03-01 06:00:00_json/: current_world.json  海南省.json  湖北省.json
data/2020-03-01 07:00:00_json/: current_china.json  广西壮族自治区.json  甘肃省.json  辽宁省.json
data/2020-03-01 08:00:00_json/: current_china.json  青海省.json  (+1 more)
(+35 files in other folders)
