[tool.poetry]
name = "covid-19-dxy-fetcher"
version = "0.1.0"
description = ""
authors = ["Raphaël Vinot <raphael.vinot@circl.lu>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
beautifulsoup4 = "^4.8.2"
lxml = "^4.5.0"

[tool.poetry.dev-dependencies]
ipython = "^7.13.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
